--- a/crates/billing-integrations/Cargo.toml
+++ b/crates/billing-integrations/Cargo.toml
@@ -23,3 +23,4 @@ tokio = { workspace = true }
 tokio-util = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+itertools = { workspace = true }
