initial updates for Gazette prefix, watch, and auth changes
Update `labels` to handle building selectors with prefix matches,
following the pattern used in Gazette's Go module. Update various
snapshots.

Fix labels::build_set to properly filter repeat label names and values.

Update `gazette` for streaming List RPC, and add a list_watch() routine
which yields a stream of list snapshots. Also update read() to adopt a
new pattern of surfacing errors to the caller, to let the caller control
retry policy. Add Error::is_transient() to support such policies.

Remove the `journal-client` crate rather than updating it,
and update all usages in `flowctl` to use `gazette` instead.

Update various ShardAPI extensions to account for Gazette Authorization model.

Add authorization middleware to Flow-specific NetworkProxy and Shuffler services.

Refactor assemble::journal_selector() to prepare for including a
name:prefix selector label, but don't do this quite yet (because it
breaks derive-typescript and other connectors that can't be updated yet).

--- a/crates/flowctl/Cargo.toml
+++ b/crates/flowctl/Cargo.toml
@@ -18,7 +18,7 @@ connector-init = { path = "../connector-init" }
 coroutines = { path = "../coroutines" }
 doc = { path = "../doc" }
 extractors = { path = "../extractors" }
-journal-client = { path = "../journal-client" }
+gazette = { path = "../gazette" }
 json = { path = "../json" }
 labels = { path = "../labels" }
 locate-bin = { path = "../locate-bin" }
