dekaf: Begin to implement `KafkaApiClient`, which is a slightly higher level wrapper around a connection to a particular Kafka broker.
This client will mainly be used to transparently proxy group management API requests from Dekaf users through to a real Kafka broker. In addition to proxying, `KafkaApiClient` also needs to have enough smarts to be able to open and authenticate (and keep authenticated) its connection to the broker.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -129,6 +129,8 @@ sqlx = { version = "0.6", features = [
     "uuid",
 ] }
 
+tokio-rustls = "0.26.0"
+webpki-roots = "0.26"
 tempfile = "3.3"
 portpicker = "0.1.1"
 tempdir = "0.3"
