dekaf: Flesh out SASL auth flow using [`rsasl`](https://docs.rs/rsasl)
* Support all SASL mechanisms. Only `SCRAM-SHA-256`, `SCRAM-SHA-1`, `PLAIN`, and `LOGIN` support username/password based auth, so those are the ones currently available. But if we want to support other mechanisms, all we have to do is figure out how to represent that mechanism's credentials and we'll be set.
* Discover which SASL mechanisms are supported by the broker and use `rsasl` to pick the "best" one. The flow here is unfortunately a _little_ bit roundabout, as the only way to do this discovery is to issue an invalid `SaslHandshakeRequest` in order to get a `SaslHandshakeResponse` back which contains all of the supported mechanisms.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,6 +107,7 @@ rocksdb = { version = "0.22", default-features = false, features = [
     "rtti",
 ] }
 rkyv = { version = "0.7", features = ["archive_le"] }
+rsasl = { version = "2", features = ["provider"] }
 rusqlite = { version = "0.29", features = ["bundled-full"] }
 rustyline = "11.0"
 schemars = "0.8"
