--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,7 @@ serde_yaml = "0.8"
 serde-transcode = "1.1"
 serde-wasm-bindgen = "0.4"
 size = "0.4"
+socket2 = "0.5.7"
 strsim = "0.10"
 strum = { version = "0.24", features = ["derive"] }
 strum_macros = "0.24"
