--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,7 +107,14 @@ rocksdb = { version = "0.22", default-features = false, features = [
     "rtti",
 ] }
 rkyv = { version = "0.7", features = ["archive_le"] }
-rsasl = { version = "2", features = ["provider"] }
+rsasl = { version = "2", default-features = false, features = [
+    "provider",
+    "config_builder",
+    "registry_static",
+    "scram-sha-1",
+    "scram-sha-2",
+    "plain",
+] }
 rusqlite = { version = "0.29", features = ["bundled-full"] }
 rustyline = "11.0"
 schemars = "0.8"
@@ -116,6 +123,7 @@ serde_json = { version = "1.0", features = ["raw_value", "float_roundtrip"] }
 serde_yaml = "0.8"
 serde-transcode = "1.1"
 serde-wasm-bindgen = "0.4"
+stream-reconnect = "0.3"
 size = "0.4"
 socket2 = "0.5.7"
 strsim = "0.10"
