dekaf: implement `OffsetFetch` and `OffsetCommit`
* Turns out, RedPanda topic names cannot include the `/` character, so this change also implemented a reversable topic name sanitization step.
* RedPanda doesn't appear to support `allow_auto_topic_creation`. As a result we have to manually ensure that topics exist, hence `KafkaApiClient::ensure_topics()`

--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -43,3 +43,4 @@ tracing-subscriber = { workspace = true }
 url = { workspace = true }
 webpki-roots = { workspace = true }
 stream-reconnect = { workspace = true }
+regex = { workspace = true }
