derive-sqlite: switch to using simd_doc::Parser for parsing documents
Rather than using serde_json.

--- a/crates/derive-sqlite/Cargo.toml
+++ b/crates/derive-sqlite/Cargo.toml
@@ -13,6 +13,7 @@ doc = { path = "../doc" }
 extractors = { path = "../extractors" }
 json = { path = "../json" }
 proto-flow = { path = "../proto-flow" }
+simd-doc = { path = "../simd-doc" }
 
 anyhow = { workspace = true }
 base64 = { workspace = true }
