--- a/crates/validation/tests/validation_skipped_when_disabled.yaml
+++ b/crates/validation/tests/validation_skipped_when_disabled.yaml
@@ -39,4 +39,7 @@ test://example/catalog.yaml:
             recommended: true
 
 # Expect that no actual driver calls are made.
-driver: {}
+driver:
+  dataPlanes:
+    "1d:1d:1d:1d:1d:1d:1d:1d":
+      default: true
