crates/doc: refactor to use our UUID parsing and Clock extraction
No behavior changes, this is just a refactor and a couple of new test
cases.

--- a/crates/doc/Cargo.toml
+++ b/crates/doc/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 
 [dependencies]
 json = { path = "../json" }
+proto-gazette = { path = "../proto-gazette" }
 tuple = { path = "../tuple" }
 
 base64 = { workspace = true }
