--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -32,6 +32,7 @@ async-trait = { workspace = true }
 base64 = { workspace = true }
 bytes = { workspace = true }
 chrono = { workspace = true }
+uuid = { workspace = true }
 clap = { workspace = true }
 colored_json = { workspace = true }       # Used to render ops::Logs for UI.
 derivative = { workspace = true }
