--- a/crates/models/Cargo.toml
+++ b/crates/models/Cargo.toml
@@ -18,6 +18,7 @@ regex = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+sqlx = { workspace = true }
 superslice = { workspace = true }
 time = { workspace = true }
 unicode-normalization = { workspace = true }
