local stacks working with cp data-plane.
next:
 * reactors need to use the broker address given to them by authorize API
 * update flowctl to accept a default-data-plane when publishing
 * spin up data-plane and do integrated test w/ local stack
 * new reactor API for Validate and Discover RPCs
 * control-plane uses reactor Validate RPC when indicated on data-plane

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ iri-string = "0.6.0"
 jemallocator = { version = "0.3", features = ["profiling"] }
 jemalloc-ctl = "0.3"
 json-patch = "0.3"
+jsonwebtoken = {version = "9", default-features = false }
 js-sys = "0.3.60"
 kafka-protocol = "0.10.0"
 lazy_static = "1.4"
