--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -22,6 +22,7 @@ json = { path = "../json" }
 labels = { path = "../labels" }
 models = { path = "../models" }
 proto-flow = { path = "../proto-flow" }
+proto-gazette = { path = "../proto-gazette" }
 runtime = { path = "../runtime" }
 sources = { path = "../sources" }
 tables = { path = "../tables", features = ["persist"] }
@@ -29,16 +30,17 @@ validation = { path = "../validation" }
 
 anyhow = { workspace = true }
 async-trait = { workspace = true }
+axum = { workspace = true }
 base64 = { workspace = true }
 bytes = { workspace = true }
 chrono = { workspace = true }
-uuid = { workspace = true }
 clap = { workspace = true }
 colored_json = { workspace = true }       # Used to render ops::Logs for UI.
 derivative = { workspace = true }
 futures = { workspace = true }
 humantime-serde = { workspace = true }
 itertools = { workspace = true }
+jsonwebtoken = { workspace = true }
 lazy_static = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
@@ -51,9 +53,11 @@ tempfile = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
+tower-http = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = { workspace = true }
+uuid = { workspace = true }
 validator = { workspace = true }
 
 [dev-dependencies]
