--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,7 +96,7 @@ protobuf = "3.1"
 protobuf-json-mapping = "3.1"
 protobuf-parse = "3.1"
 regex = "1.5"
-reqwest = { version = "0.11", default_features = false, features = [
+reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
     "stream",
