wip but a lot more working!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,13 +85,13 @@ num-bigint = "0.4"
 open = "3"
 
 pathfinding = "3.0"
-pbjson = "0.6"
-pbjson-types = "0.6"
+pbjson = "0.7"
+pbjson-types = "0.7"
 percent-encoding = "2.1"
 pin-project-lite = "0.2"
 postgrest = "1.6"
 page-turner = "0.8.2"
-prost = "0.12"
+prost = "0.13"
 protobuf = "3.1"
 protobuf-json-mapping = "3.1"
 protobuf-parse = "3.1"
@@ -152,9 +152,10 @@ tokio = { version = "1", features = [
     "time",
 ] }
 tokio-util = { version = "0.7", features = ["io", "compat"] }
-tonic = { version = "0.10", features = ["tls", "tls-roots"] }
-tower = "0.4"
-tower-http = { version = "0.4", features = ["trace"] }
+tonic = { version = "0.12", features = ["tls", "tls-roots"] }
+hyper-util = "0.1"
+tower = { version = "0.5", features = ["util"] }
+tower-http = { version = "0.5", features = ["trace"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [
     "time",
@@ -195,12 +196,13 @@ wasm-bindgen-test = "0.3.13"
 
 # Used exclusively as build-dependencies
 cbindgen = "0.23"
-pbjson-build = "0.6"
-prost-build = "0.12"
-tonic-build = "0.10"
+pbjson-build = "0.7"
+prost-build = "0.13"
+tonic-build = "0.12"
 
 warp = "0.3.3"                                     # TODO(johnny) remove me in favor of axum
-axum = { version = "0.6", features = ["headers"] }
+axum = { version = "0.7", features = ["macros"] }
+axum-extra = { version = "0.9", features = ["typed-header"] }
 
 [profile.release]
 incremental = true
