--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -59,6 +59,7 @@ tracing-subscriber = { workspace = true }
 url = { workspace = true }
 uuid = { workspace = true }
 validator = { workspace = true }
+xxhash-rust = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
