agent: switch to jemalloc allocator
Switches `agent` to use `jemalloc` from the allocator crate.
This is being done in order to facilitate debugging of memory issues
using jemalloc's built-in profiling features.

--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -13,6 +13,7 @@ license.workspace = true
 [dependencies]
 activate = { path = "../activate" }
 agent-sql = { path = "../agent-sql" }
+allocator = { path = "../allocator" }
 async-process = { path = "../async-process" }
 build = { path = "../build" }
 doc = { path = "../doc" }
