--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ humantime-serde = "1.1"
 itertools = "0.10"
 indexmap = { version = "1.8", features = ["serde"] }
 iri-string = "0.6.0"
-jemallocator = "0.3"
+jemallocator = { version = "0.3", features = ["profiling"] }
 jemalloc-ctl = "0.3"
 json-patch = "0.3"
 js-sys = "0.3.60"
