dekaf: Settle on `deadpool` for the async connection pooling implementation. The problem is, `bb8` swallows all error messages as retry timeouts. See https://github.com/djc/bb8/issues/141

--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -44,6 +44,6 @@ tracing-subscriber = { workspace = true }
 typestate = { workspace = true }
 url = { workspace = true }
 webpki-roots = { workspace = true }
-bb8 = { workspace = true }
+deadpool = { workspace = true }
 regex = { workspace = true }
 # hexdump = { workspace = true }
