more control-plane and ops WIP for E2E testing

--- a/ops-catalog/data-plane-template.flow.yaml
+++ b/ops-catalog/data-plane-template.flow.yaml
@@ -1,5 +1,5 @@
 # When editing this catalog, regenerate its bundle via:
-#  flowctl raw bundle --source ops-catalog-new/data-plane-template.flow.yaml  > ops-catalog-new/data-plane-template.bundle.json
+#  flowctl raw bundle --source ops-catalog/data-plane-template.flow.yaml  > ops-catalog/data-plane-template.bundle.json
 
 collections:
   ops/tasks/BASE_NAME/logs:
@@ -43,7 +43,7 @@ collections:
                 name:
                   # Don't read our own inferences.
                   - ops/rollups/L1/BASE_NAME/inferred-schemas
-                  # Don't read the global rollup, if it happens to live in our data-plane.
+                  # Don't read the global roll-up, if it happens to live in our data-plane.
                   - ops.us-central1.v1/inferred-schemas/L2
 
           shuffle:
@@ -79,48 +79,3 @@ collections:
 
       shards:
         minTxnDuration: 5s
-
-  ops.us-central1.v1/inferred-schemas/L2:
-    schema: inferred-schemas.schema.yaml
-    key: [/collection_name]
-    derive:
-      using:
-        sqlite: {}
-      transforms:
-        # Bindings of this derivation are dynamically generated over all current data-planes.
-        # This binding is ignored in production, and is used only for tests.
-        - name: from-base-name
-          source: ops/rollups/L1/BASE_NAME/inferred-schemas
-          shuffle:
-            key: [/collection_name]
-          lambda: select json($flow_document);
-
-  ops.us-central1.v1/catalog-stats-L2:
-    schema: catalog-stats.schema.yaml
-    key: [/catalogName, /grain, /ts]
-    projections:
-      catalog_name: /catalogName
-      bytes_written_by_me: /statsSummary/writtenByMe/bytesTotal
-      docs_written_by_me: /statsSummary/writtenByMe/docsTotal
-      bytes_read_by_me: /statsSummary/readByMe/bytesTotal
-      docs_read_by_me: /statsSummary/readByMe/docsTotal
-      bytes_written_to_me: /statsSummary/writtenToMe/bytesTotal
-      docs_written_to_me: /statsSummary/writtenToMe/docsTotal
-      bytes_read_from_me: /statsSummary/readFromMe/bytesTotal
-      docs_read_from_me: /statsSummary/readFromMe/docsTotal
-      usage_seconds: /statsSummary/usageSeconds
-      warnings: /statsSummary/warnings
-      errors: /statsSummary/errors
-      failures: /statsSummary/failures
-
-    derive:
-      using:
-        sqlite: {}
-      transforms:
-        # Bindings of this derivation are dynamically generated over all current data-planes.
-        # This binding is ignored in production, and is used only for tests.
-        - name: from-base-name
-          source: ops/rollups/L1/BASE_NAME/catalog-stats
-          shuffle:
-            key: [/catalogName]
-          lambda: select json($flow_document);
