dekaf: Add support for conditionally exposing topic names that strictly conform to Kafka's topic name restrictions.
* Add support for configuring behavior through passing a JSON object as your username. This gets parsed into `ConfigOptions`, which contains flags to configure Dekaf's behavior.

NOTE: The username also supports `.`-encoding as some platforms do not support JSON objects as usernames

* Refactor the way we send information to the upstream Kafka broker in order to serve e.g group management requests. Instead of sending kafka-compliant topic names, we now only send encrypted strings as topic names so no customer information is leaked.

--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -46,4 +46,6 @@ url = { workspace = true }
 webpki-roots = { workspace = true }
 deadpool = { workspace = true }
 regex = { workspace = true }
-# hexdump = { workspace = true }
+hex = { workspace = true }
+simple_crypt = { workspace = true }
+percent-encoding = { workspace = true }
