crates/agent & agent-sql: federated data-planes and APIs
Update handling of specifications to be aware of their data-plane
assignments, and update publications and discoveries to understand a
"default" data-plane which is assigned to newly-created tasks.
These are threaded into the LiveCatalog handed to validations.

Activations now happen in the context of a specific data-plane, with
dynamically built clients, ops journal templates,
and Authorization tokens for the operation.

Add `api` module with handlers for:

 * Creating a data-plane in the platform, including its `data_planes`
   row, ops collections, and L1 derivations.

 * Re-generating L2 derivations from the currently-active data-planes.

 * Authorizing access to a collection on behalf of a shard running
   within a data-plane.

Refactor out `live_spec_ids`: this is no longer needed, as they're
tracked on various LiveCatalog tables.

Update arguments of `agent` to take a port on whihc to serve an API
server, and to toggle whether to serve async job handlers. This allows
agent to be separately deployed in a "handler" vs "API server" mode.

Also remove broker-address and consumer-address flags, and add a
builds-root flag. Data-plane addresses are now retrieved from the
data_planes table.

Onboarded tenants are now provisioned `read` to `ops/dp/public/`.

--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -22,6 +22,7 @@ json = { path = "../json" }
 labels = { path = "../labels" }
 models = { path = "../models" }
 proto-flow = { path = "../proto-flow" }
+proto-gazette = { path = "../proto-gazette" }
 runtime = { path = "../runtime" }
 sources = { path = "../sources" }
 tables = { path = "../tables", features = ["persist"] }
@@ -29,6 +30,8 @@ validation = { path = "../validation" }
 
 anyhow = { workspace = true }
 async-trait = { workspace = true }
+axum = { workspace = true }
+axum-extra = { workspace = true }
 base64 = { workspace = true }
 bytes = { workspace = true }
 chrono = { workspace = true }
@@ -38,6 +41,7 @@ derivative = { workspace = true }
 futures = { workspace = true }
 humantime-serde = { workspace = true }
 itertools = { workspace = true }
+jsonwebtoken = { workspace = true }
 lazy_static = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
@@ -50,10 +54,13 @@ tempfile = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
+tower-http = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = { workspace = true }
+uuid = { workspace = true }
 validator = { workspace = true }
+xxhash-rust = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
