build and Tiltfile updates for federated data-planes
Update the release Debian base image we build off of, and add `podman`
which is used for running containers in new data-planes.
Remove NodeJS and docker apt repos.

Update to a 24.04 Ubuntu builder in GitHub Actions. Account for
changes to the packages we must install as part of extra CI setup.

Update Tiltfile for how local stacks now provision their data-plane
and for authorization keys.

Lots of Go and Rust dependency updates.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -6,8 +6,8 @@ project_id = "flow"
 # Port to use for the API URL.
 port = 5431
 # Schemas to expose in your API. Tables, views and stored procedures in this schema will get API
-# endpoints. public and storage are always included.
-schemas = []
+# endpoints.
+schemas = ["public"]
 # Extra schemas to add to the search_path of every request.
 extra_search_path = ["extensions"]
 # The maximum number of rows returns from a view, table, or stored procedure. Limits payload size
