dekaf: Address some PR feedback: * Change to more qualified names as opposed to lots of `use`s * Add some comments describing various Kafka/dekaf behavior * Switch from `webpki-roots` to `rustls-native-certs` * Refactor `KafkaApiClient` a bit to simplify connecting to brokers that we may or may not already have a connection to. That logic got moved into `KafkaApiClient::connect_to(&self, broker_url: &str)`

--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -43,7 +43,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 typestate = { workspace = true }
 url = { workspace = true }
-webpki-roots = { workspace = true }
+rustls-native-certs = { workspace = true }
 deadpool = { workspace = true }
 regex = { workspace = true }
 hex = { workspace = true }
