--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,16 +106,14 @@ rocksdb = { version = "0.22", default-features = false, features = [
     "rtti",
 ] }
 rkyv = { version = "0.7", features = ["archive_le"] }
-# TODO: Switch back to crates.io version of rsasl when this PR is merged:
-# https://github.com/dequbed/rsasl/pull/48
-rsasl = { version = "2", default-features = false, features = [
+rsasl = { version = "2.1.0", default-features = false, features = [
     "provider",
     "config_builder",
     "registry_static",
     "scram-sha-1",
     "scram-sha-2",
     "plain",
-], git = "https://github.com/WenyXu/rsasl.git", branch = "feat/support-sha512" }
+] }
 rusqlite = { version = "0.29", features = ["bundled-full"] }
 rustyline = "11.0"
 schemars = "0.8"
@@ -142,7 +140,6 @@ sqlx = { version = "0.6", features = [
 
 typestate = "0.8.0"
 tokio-rustls = "0.26.0"
-webpki-roots = "0.26"
 tempfile = "3.3"
 portpicker = "0.1.1"
 tempdir = "0.3"
@@ -177,6 +174,7 @@ tracing-subscriber = { version = "0.3", features = [
     "env-filter",
     "fmt",
 ] }
+rustls-native-certs = "0.7.2"
 zeroize = "1.6"
 
 unicode-bom = "1.1"
