--- a/crates/models/Cargo.toml
+++ b/crates/models/Cargo.toml
@@ -18,7 +18,7 @@ regex = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-sqlx = { workspace = true }
+sqlx = { workspace = true, optional = true }
 superslice = { workspace = true }
 time = { workspace = true }
 unicode-normalization = { workspace = true }
@@ -29,3 +29,8 @@ validator = { workspace = true }
 insta = { workspace = true }
 itertools = { workspace = true }
 serde_yaml = { workspace = true }
+
+[features]
+default = []
+
+sqlx-support = ["sqlx"]
