crates/sources: extend_from_catalog fixes
Use the _local_ scope, NOT the remote one, to determine the existing
local scope of a resource which is being kept or over-written.

We must also clear out imports of a local spec which is being replaced,
because the replacement is a fully inline model, and we're typically
going to indirect it before writing out resources, which would otherwise
result in duplicated imports.

Fixes #1590
Fixes #1558

--- a/crates/sources/src/merge_test_src.yaml
+++ b/crates/sources/src/merge_test_src.yaml
@@ -1,4 +1,8 @@
 test://example/catalog.yaml:
+  import:
+    - flow://control/some/other/resource.yaml
+
+flow://control/some/other/resource.yaml:
   captures:
     acmeCo/one/new:
       endpoint:
