--- a/crates/gazette/Cargo.toml
+++ b/crates/gazette/Cargo.toml
@@ -18,12 +18,13 @@ async-compression = { workspace = true }
 bytes = { workspace = true }
 futures = { workspace = true }
 futures-core = { workspace = true }
+hyper-util = { workspace = true }
+jsonwebtoken = { workspace = true }
 reqwest = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
 tonic = { workspace = true }
-hyper-util = { workspace = true }
 tower = { workspace = true }
 tracing = { workspace = true }
 uuid = { workspace = true }
