--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -21,8 +21,10 @@ gazette = { path = "../gazette" }
 json = { path = "../json" }
 labels = { path = "../labels" }
 models = { path = "../models" }
+ops = { path = "../ops" }
 proto-flow = { path = "../proto-flow" }
 proto-gazette = { path = "../proto-gazette" }
+proto-grpc = { path = "../proto-grpc", features = ["runtime_client"] }
 runtime = { path = "../runtime" }
 sources = { path = "../sources" }
 tables = { path = "../tables", features = ["persist"] }
@@ -54,6 +56,7 @@ tempfile = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
+tonic = { workspace = true }
 tower-http = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
