crates/{models,tables,agent}: refactor CatalogType, Capability, and RoleGrants
Push these down into the `models` and `tables` crates, with conditional sqlx support.

Add new routines for efficient evaluation of transitive role grants.

--- a/crates/tables/Cargo.toml
+++ b/crates/tables/Cargo.toml
@@ -26,6 +26,10 @@ serde_json = { workspace = true }
 superslice = { workspace = true }
 url = { workspace = true }
 
+[dev-dependencies]
+
+insta = { workspace = true }
+
 [features]
 default = []
 
