--- a/Cargo.toml
+++ b/Cargo.toml
@@ -147,6 +147,7 @@ sqlx = { version = "0.6", features = [
 typestate = "0.8.0"
 tokio-rustls = "0.26.0"
 rustls = { version = "0.23.10", features = ["aws_lc_rs"] }
+rustls-pemfile = "2.1.3"
 tempfile = "3.3"
 portpicker = "0.1.1"
 tempdir = "0.3"
@@ -222,6 +223,7 @@ tonic-build = "0.12"
 
 warp = "0.3.3"                                                # TODO(johnny) remove me in favor of axum
 axum = { version = "0.7", features = ["macros"] }
+axum-server = { version = "0.7", features = ["tls-rustls"] }
 axum-extra = { version = "0.9", features = ["typed-header"] }
 
 [profile.release]
