--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -34,6 +34,7 @@ flate2 = { workspace = true }
 itertools = { workspace = true }
 mime = { workspace = true }
 num-bigint = { workspace = true }
+parquet = { workspace = true }
 protobuf = { workspace = true }
 protobuf-json-mapping = { workspace = true }
 protobuf-parse = { workspace = true }
