--- a/Cargo.toml
+++ b/Cargo.toml
@@ -148,6 +148,7 @@ typestate = "0.8.0"
 tokio-rustls = "0.26.0"
 rustls = { version = "0.23.10", features = ["aws_lc_rs"] }
 rustls-pemfile = "2.1.3"
+webpki = "0.22.4"
 tempfile = "3.3"
 portpicker = "0.1.1"
 tempdir = "0.3"
