--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -56,6 +56,7 @@ aes-siv = { workspace = true }
 percent-encoding = { workspace = true }
 rustls = { workspace = true }
 rustls-pemfile = { workspace = true }
+webpki = { workspace = true }
 metrics = { workspace = true }
 metrics-prometheus = { workspace = true }
 prometheus = { workspace = true }
