--- a/crates/tables/Cargo.toml
+++ b/crates/tables/Cargo.toml
@@ -25,6 +25,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 superslice = { workspace = true }
 url = { workspace = true }
+uuid = { workspace = true }
 xxhash-rust = { workspace = true }
 
 [dev-dependencies]
