dekaf: Update to build in GH actions environment directly

--- a/.github/workflows/dekaf.yaml
+++ b/.github/workflows/dekaf.yaml
@@ -15,19 +15,33 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           submodules: false
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: x86_64-unknown-linux-musl
+
+      - run: sudo apt install -y musl-tools
+
       - name: Login to GitHub container registry
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | \
             docker login --username ${{ github.actor }} --password-stdin ghcr.io
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: |
+            crates/dekaf
+      - name: build `dekaf`
+        run: cargo build --target x86_64-unknown-linux-musl --release -p dekaf
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Run git describe
         id: git_describe
         run: echo "describe_output=$(git describe --dirty --tags)" >> $GITHUB_OUTPUT
@@ -35,7 +49,7 @@ jobs:
       # The `id` "meta" allows the output of this step to be referenced in a subsequent step. The `images` value provides the base name for the tags and labels.
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@a64d0487d7069df33b279515d35d60fa80e2ea62
+        uses: docker/metadata-action@v5
         with:
           images: ghcr.io/estuary/dekaf
           tags: |
