fixup! dekaf: Update to build in GH actions environment directly

--- a/.github/workflows/dekaf.yaml
+++ b/.github/workflows/dekaf.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           targets: x86_64-unknown-linux-musl
 
-      - run: sudo apt install -y musl-tools
+      - run: sudo apt install -y musl-tools musl-g++
 
       - name: Login to GitHub container registry
         run: |
