fixup! dekaf: Update to build in GH actions environment directly

--- a/crates/dekaf/Dockerfile
+++ b/crates/dekaf/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:bookworm-slim AS runtime
 WORKDIR /app
-COPY target/x86_64-unknown-linux-musl/release/dekaf /
+COPY target/release/dekaf /
 RUN --mount=type=cache,target=/var/cache/apt \
     --mount=type=cache,target=/var/lib/apt \
     apt-get update && apt-get install -y libssl3 ca-certificates
