--- a/.github/workflows/dekaf.yaml
+++ b/.github/workflows/dekaf.yaml
@@ -26,8 +26,6 @@ jobs:
         with:
           targets: x86_64-unknown-linux-musl
 
-      - run: sudo apt install -y musl-tools musl-g++
-
       - name: Login to GitHub container registry
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | \
@@ -38,7 +36,7 @@ jobs:
           workspaces: |
             crates/dekaf
       - name: build `dekaf`
-        run: cargo build --target x86_64-unknown-linux-musl --release -p dekaf
+        run: cargo build --release -p dekaf
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
